--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-ANYKERNEL_SOURCE=
-ANYKERNEL_SOURCE_BRANCH=
-KERNEL_SOURCE=
-KERNEL_SOURCE_BRANCH=
-KERNEL_TARGET=
+ANYKERNEL_SOURCE=https://github.com/kardebayan/AnyKernel3
+ANYKERNEL_SOURCE_BRANCH=master
+KERNEL_SOURCE=https://github.com/mxsky01/kernel-ginkgo
+KERNEL_SOURCE_BRANCH=Redmi Note 8
+KERNEL_TARGET=ginkgo-perf_defconfig
 BUILD_ARGS:CC=clang LD=ld.lld
