--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/kardebayan/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
-KERNEL_SOURCE=https://github.com/mxsky01/kernel-ginkgo
-KERNEL_SOURCE_BRANCH=main
+KERNEL_SOURCE=https://github.com/mxsky01/android_kernel_xiaomi_sm6125_millet
+KERNEL_SOURCE_BRANCH=lineage-19.1
 KERNEL_TARGET=vendor/ginkgo-perf
 BUILD_ARGS:CC=clang LD=ld.lld
